--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     - run: pnpm install
     - run: pnpm run docs:build
     - run: echo $PATH
-    - run: sudo tar -zcvf release.tgz /docs /package.json /pnpm-lock.json
+    - run: tar -zcvf release.tgz docs package.json pnpm-lock.json
 
     # 发布 Release
     - name: Create Release
@@ -65,6 +65,6 @@ jobs:
         port: ${{ secrets.PORT }}
         script: |
           cd /home/vuepress
-          sudo wget https://github.com/ccmostmosthandsome/VuepressBlog/releases/latest/download/release.tgz -O release.tgz
-          sudo tar zxvf release.tgz
+          wget https://github.com/ccmostmosthandsome/VuepressBlog/releases/latest/download/release.tgz -O release.tgz
+          tar zxvf release.tgz
           pnpm install 
