--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     - run: pnpm install
     - run: pnpm run docs:build
     - run: echo $PATH
-    - run: tar -zcvf release.tgz docs package.json pnpm-lock.json
+    - run: tar --ignore-failed-read -zcvf release.tgz docs package.json pnpm-lock.json
 
     # 发布 Release
     - name: Create Release
