--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,14 +29,14 @@ jobs:
     - run: pnpm install
     - run: pnpm run docs:build
     - run: echo $PATH
-    - run: tar --ignore-failed-read -zcvf release.tgz docs package.json pnpm-lock.json
+    - run: tar --ignore-failed-read -zcvf release.tgz docs package.json pnpm-lock.yaml
 
     # 发布 Release
     - name: Create Release
       id: create_release
       uses: actions/create-release@master
       env:
-        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.CCTOKENS }}
       with:
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
@@ -48,7 +48,7 @@ jobs:
       id: upload-release-asset
       uses: actions/upload-release-asset@master
       env:
-        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.CCTOKENS }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./release.tgz
