--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,7 @@ jobs:
         version: 8
         run_install: true
 
-    - name: My Step
-      run: |
-        echo "Debug information..."
-        # Your other commands here
+    
 
     - run: pnpm install
     - run: pnpm run docs:build
@@ -50,7 +47,7 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
-      
+        run: gh release create ${{ github.ref }} ./path/to/artifact/* -v
 
     # 上传构建结果到 Release
     - name: Upload Release Asset
