--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,12 +42,12 @@ jobs:
       uses: actions/create-release@master
       env:
         GITHUB_TOKEN: ${{ secrets.CCTOKENS }}
+        ACTIONS_STEP_DEBUG: true
       with:
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
-        run: gh release create ${{ github.ref }} ./path/to/artifact/* -v
 
     # 上传构建结果到 Release
     - name: Upload Release Asset
