--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,10 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
-      run: gh release create ${{ github.ref }} ./path/to/artifact/* -v
+        run: |
+        echo "GITHUB_TOKEN: $GITHUB_TOKEN"
+        echo "github.ref: ${{ github.ref }}"
+        gh release create ${{ github.ref }} ./path/to/artifact/* -v
 
     # 上传构建结果到 Release
     - name: Upload Release Asset
