--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,14 +47,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.CCTOKENS }}
         ACTIONS_STEP_DEBUG: true
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        # tag_name: ${{ github.ref }}
+        # release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
-        run: |
-        echo "GITHUB_TOKEN: $GITHUB_TOKEN"
-        echo "github.ref: ${{ github.ref }}"
-          gh release create ${{ github.ref }} ./path/to/artifact/* -v
 
     # 上传构建结果到 Release
     - name: Upload Release Asset
