--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,8 @@ jobs:
       with:
         # tag_name: ${{ github.ref }}
         # release_name: Release ${{ github.ref }}
+        tag_name: v1.0.0  # Specify your tag or version
+        release_name: Release v1.0.0
         draft: false
         prerelease: false
 
