--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,15 +46,13 @@ jobs:
     # 发布 Release
     - name: Create Release
       id: create_release
-      uses: actions/create-release@master
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.CCTOKENS }}
         ACTIONS_STEP_DEBUG: true
       with:
-        # tag_name: ${{ github.ref }}
-        # release_name: Release ${{ github.ref }}
-        tag_name: v1.0.0  # Specify your tag or version
-        release_name: Release v1.0.0
+        tag_name: ${{ github.ref }}
+        name: Demo ${{ github.ref_name }}
         draft: false
         prerelease: false
 
